--- a/roles/myrole/tasks/main.yml
+++ b/roles/myrole/tasks/main.yml
@@ -4,8 +4,7 @@
   yum:
     name: httpd
     state: present
-
-  name: start apache service
+- name: start apache service
   service:
     name: httpd
     state: running
